Fix compensate scrollbar for header

--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,8 @@ body {
   color: #000;
   font-weight: normal;
   font-style: normal; }
+  body.compensate-for-scrollbar .header {
+    padding-right: 15px; }
 
 body * {
   outline: none; }
